# Manipulation_ufomap

./: .clangd  README.md
lib/compute/: CMakeLists.txt
lib/compute/include/ufo/compute/: compute.hpp
lib/compute/src/: compute.cpp
lib/container/include/ufo/container/: structure_of_arrays.hpp  tree_map.hpp  tree_set.hpp
lib/container/include/ufo/container/tree/: block.hpp  container.hpp  data.hpp  tree.hpp
lib/container/include/ufo/container/tree/predicate/: and.hpp  bool.hpp  filter.hpp
lib/core/include/ufo/core/: normal.hpp
lib/map/: CMakeLists.txt
lib/map/apps/: CMakeLists.txt
lib/map/apps/manipulation/: CMakeLists.txt  README.md  config.toml  numpy_to_tsv.py  pixel_world_mapping.py  ply_to_pcd.bash  ufo_manipulation.cpp
lib/map/include/ufo/map/: map_full.hpp  ufomap.hpp
lib/map/include/ufo/map/color/: block.hpp  directional_map.hpp  map.hpp
lib/map/include/ufo/map/integrator/: angular_integrator.hpp  integrator.hpp
lib/map/include/ufo/map/occupancy/: block.hpp  directional_map.hpp  map.hpp
lib/map/include/ufo/map/occupancy_directional/: block.hpp  map.hpp
lib/math/include/ufo/math/: math.hpp
lib/math/include/ufo/math/detail/: vec_fun.hpp
lib/vision/include/ufo/vision/: camera.hpp  color.hpp  color_delta_e.hpp  color_map.hpp  color_space.hpp  color_type.hpp  image.hpp  lab.hpp  lch.hpp  rgb.hpp
lib/vision/include/ufo/vision/color_map/: black_body.hpp  extended_kindlmann.hpp  inferno.hpp  kindlmann copy 2.hpp  kindlmann.hpp
lib/vision/include/ufo/vision/detail/: color.hpp  color_type_traits.hpp
lib/viz/shaders/: map_ray_trace_3d.wgsl
